src/test/ui/const-generics/fn-const-param-infer.stderr
warning: the feature `const_generics` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/fn-const-param-infer.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information

error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-infer.rs:4:25
   |
LL | struct Checked<const F: fn(usize) -> bool>;
   |                         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

